...
                            Text("选择图片（相册）")
                        }
                    }
                }
                Row(verticalAlignment = Alignment.CenterVertically) {
                    Checkbox(checked = isConditional, onCheckedChange = { isConditional = it })
                    Text("条件任务", fontSize = 14.sp)
                }
            }
        },
        confirmButton = {
            TextButton(
                onClick = {
...
